@@ -212,6 +212,7 @@ Change List For v0.7.4 (Language: Python / Status: In Progress)
 * Cleanup: Made the batch mode header and footer output more concise.
 * Cleanup: Moved CTRL-C state info into GlobalConfig.py.
   This allows us to completely dump out of bactch mode on CTRL-C.
+- Cleanup: Added code to batch mode to close STDIN, can be backgrounded more easily now.
 
 Change List For v0.8.0 (Language: Python / Status: Planning)
 ---------------------------------------------------------------
